# neurogauge

./: .gitignore  .npmrc  ANALYTICS_BUILD_PLAN.md  CLAUDE.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
.github/workflows/: analytics.yml
analytics/: .env.production.example  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml
analytics/app/: deps.py  main.py
analytics/app/core/: csv_io.py  guards.py  plots.py
analytics/app/routers/: anova.py  chi_square.py  correlation.py  descriptive.py  factor.py  friedman.py  growth.py  irt.py  kruskal.py  mann_whitney.py  modelling.py  normality.py  regression.py  reliability.py  roc.py  sem.py  ttest.py  wilcoxon.py
analytics/app/schemas/: common.py
analytics/app/tests/: conftest.py  test_anova.py  test_chi_square.py  test_correlation.py  test_descriptive.py  test_edge_cases.py  test_factor.py  test_friedman.py  test_growth.py  test_irt.py  test_kruskal.py  test_mann_whitney.py  test_modelling.py  test_normality.py  test_regression.py  test_reliability.py  test_roc.py  test_sem.py  test_ttest.py  test_wilcoxon.py
analytics/deploy/nginx/: analytics.conf
prisma/: schema.prisma
prisma/migrations/20260504225520_init/: migration.sql
src/: middleware.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/test/: page.tsx
src/components/: AppToaster.tsx  Footer.tsx  Header.tsx  PasswordInput.tsx  Stimulus.tsx
src/contexts/: WorkbenchContext.tsx
src/lib/: auth.ts  config.ts  csv.ts  id.ts  mail.ts  scoring.ts  sequences.ts  store.ts  toast.ts  types.ts
(+141 files in other folders)
