[project]
name = "neurogauge-analytics"
version = "0.1.0"
description = "Statistical analytics sidecar for Neurogauge"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "numpy>=2.1",
  "pandas>=2.2",
  "scipy>=1.14",
  "statsmodels>=0.14",
  "pingouin>=0.5.5",
  "scikit-posthocs>=0.9",
  "plotly>=5.24",
  "semopy>=2.3",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
